// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manga page should render correctly Should render correctly as admin 1`] = `
<WithStyles(ForwardRef(Container))
  disableGutters={true}
  maxWidth="lg"
>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-paper-10"
  >
    <div
      className="makeStyles-titleBar-2"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-title-1"
        variant="h4"
      >
        Dr. STONE
      </WithStyles(ForwardRef(Typography))>
    </div>
    <div
      className="makeStyles-details-5"
    >
      <a
        href="https://myanimelist.net/manga/103897"
        rel="noreferrer noopener"
        target="_blank"
      >
        <img
          alt="Dr. STONE"
          className="makeStyles-thumbnail-4"
          src="https://mangadex.org/images/manga/20882.jpg?1585634146"
        />
      </a>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-rootGrid-12"
        container={true}
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-infoGrid-11"
          container={true}
          direction="column"
        >
          <MangaInfo
            mangaData={
              Object {
                "al": "https://anilist.co/manga/98416",
                "amz": "https://www.amazon.co.jp/gp/product/B075F8JBQ1",
                "ap": "https://www.anime-planet.com/manga/dr-stone",
                "artist": "Boichi",
                "author": "Inagaki Riichiro",
                "bw": "https://bookwalker.jp/series/114645",
                "chapters": Array [
                  Object {
                    "chapter_number": 157,
                    "chapter_url": "1007322",
                    "group": "Shueisha",
                    "release_date": 1593964800000,
                    "service_id": 1,
                    "title": "Z=157: Same Time, Same Place",
                  },
                  Object {
                    "chapter_number": 156,
                    "chapter_url": "938629",
                    "group": "MangaPlus",
                    "release_date": null,
                    "service_id": 2,
                    "title": "Z=156: Two Scientists",
                  },
                  Object {
                    "chapter_number": 156,
                    "chapter_url": "1007024",
                    "group": "Shueisha",
                    "release_date": 1593187200000,
                    "service_id": 1,
                    "title": "Z=156: Two Scientists",
                  },
                ],
                "cover": "https://mangadex.org/images/manga/20882.jpg?1585634146",
                "ebj": "https://www.ebookjapan.jp/ebj/413780/",
                "engtl": "https://www.viz.com/dr-stone",
                "estimated_release": "2020-07-12T16:00:00.000Z",
                "kt": "https://kitsu.io/manga/38860",
                "last_updated": "2020-06-28T08:15:55.170Z",
                "latest_chapter": 157,
                "latest_release": "2020-07-05T16:00:00.000Z",
                "mal": "https://myanimelist.net/manga/103897",
                "manga_id": 1,
                "mu": "https://www.mangaupdates.com/series.html?id=139601",
                "nu": "https://www.novelupdates.com/series/null",
                "raw": "null",
                "release_interval": Object {
                  "days": 7,
                },
                "services": Array [
                  Object {
                    "name": "MANGA Plus",
                    "service_id": 1,
                    "title_id": "100010",
                    "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                    "url_format": "https://mangaplus.shueisha.co.jp/viewer/{}",
                  },
                  Object {
                    "name": "MangaDex",
                    "service_id": 2,
                    "title_id": "20882",
                    "url": "https://mangadex.org/title/{}",
                    "url_format": "https://mangadex.org/chapter/{}",
                  },
                ],
                "status": 0,
                "title": "Dr. STONE",
              }
            }
          />
          <MangaAliases />
        </WithStyles(ForwardRef(Grid))>
        <MangaSourceList
          classesProp={
            Array [
              "makeStyles-sourceList-8",
            ]
          }
          followUnfollow={[Function]}
          items={
            Array [
              Object {
                "name": "MANGA Plus",
                "service_id": 1,
                "title_id": "100010",
                "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                "url_format": "https://mangaplus.shueisha.co.jp/viewer/{}",
              },
              Object {
                "name": "MangaDex",
                "service_id": 2,
                "title_id": "20882",
                "url": "https://mangadex.org/title/{}",
                "url_format": "https://mangadex.org/chapter/{}",
              },
            ]
          }
          userFollows={Array []}
        />
      </WithStyles(ForwardRef(Grid))>
    </div>
    <WithStyles(ForwardRef(Tabs))
      onChange={[Function]}
      value={0}
    >
      <WithStyles(ForwardRef(Tab))
        label="Chapters"
        value={0}
      />
      <WithStyles(ForwardRef(Tab))
        label="Stats"
        value={1}
      />
    </WithStyles(ForwardRef(Tabs))>
    <TabPanelCustom
      index={0}
      noRerenderOnChange={true}
      value={0}
    >
      <ChapterList
        chapters={
          Array [
            Object {
              "chapter_number": 157,
              "chapter_url": "1007322",
              "group": "Shueisha",
              "release_date": 2020-07-05T16:00:00.000Z,
              "service_id": 1,
              "title": "Z=157: Same Time, Same Place",
              "url": "https://mangaplus.shueisha.co.jp/viewer/1007322",
            },
            Object {
              "chapter_number": 156,
              "chapter_url": "938629",
              "group": "MangaPlus",
              "release_date": 1970-01-01T00:00:00.000Z,
              "service_id": 2,
              "title": "Z=156: Two Scientists",
              "url": "https://mangadex.org/chapter/938629",
            },
            Object {
              "chapter_number": 156,
              "chapter_url": "1007024",
              "group": "Shueisha",
              "release_date": 2020-06-26T16:00:00.000Z,
              "service_id": 1,
              "title": "Z=156: Two Scientists",
              "url": "https://mangaplus.shueisha.co.jp/viewer/1007024",
            },
          ]
        }
        editable={false}
        mangaId={1}
        serviceUrlFormats={
          Object {
            "1": "https://mangaplus.shueisha.co.jp/viewer/{}",
            "2": "https://mangadex.org/chapter/{}",
          }
        }
      />
    </TabPanelCustom>
    <TabPanelCustom
      index={1}
      noRerenderOnChange={true}
      value={0}
    >
      <ReleaseHeatmap
        dataRows={Array []}
      />
    </TabPanelCustom>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(ForwardRef(Container))>
`;

exports[`Manga page should render correctly should render correctly 1`] = `
<WithStyles(ForwardRef(Container))
  disableGutters={true}
  maxWidth="lg"
>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-paper-10"
  >
    <div
      className="makeStyles-titleBar-2"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-title-1"
        variant="h4"
      >
        Dr. STONE
      </WithStyles(ForwardRef(Typography))>
    </div>
    <div
      className="makeStyles-details-5"
    >
      <a
        href="https://myanimelist.net/manga/103897"
        rel="noreferrer noopener"
        target="_blank"
      >
        <img
          alt="Dr. STONE"
          className="makeStyles-thumbnail-4"
          src="https://mangadex.org/images/manga/20882.jpg?1585634146"
        />
      </a>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-rootGrid-12"
        container={true}
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-infoGrid-11"
          container={true}
          direction="column"
        >
          <MangaInfo
            mangaData={
              Object {
                "al": "https://anilist.co/manga/98416",
                "amz": "https://www.amazon.co.jp/gp/product/B075F8JBQ1",
                "ap": "https://www.anime-planet.com/manga/dr-stone",
                "artist": "Boichi",
                "author": "Inagaki Riichiro",
                "bw": "https://bookwalker.jp/series/114645",
                "chapters": Array [
                  Object {
                    "chapter_number": 157,
                    "chapter_url": "1007322",
                    "group": "Shueisha",
                    "release_date": 1593964800000,
                    "service_id": 1,
                    "title": "Z=157: Same Time, Same Place",
                  },
                  Object {
                    "chapter_number": 156,
                    "chapter_url": "938629",
                    "group": "MangaPlus",
                    "release_date": null,
                    "service_id": 2,
                    "title": "Z=156: Two Scientists",
                  },
                  Object {
                    "chapter_number": 156,
                    "chapter_url": "1007024",
                    "group": "Shueisha",
                    "release_date": 1593187200000,
                    "service_id": 1,
                    "title": "Z=156: Two Scientists",
                  },
                ],
                "cover": "https://mangadex.org/images/manga/20882.jpg?1585634146",
                "ebj": "https://www.ebookjapan.jp/ebj/413780/",
                "engtl": "https://www.viz.com/dr-stone",
                "estimated_release": "2020-07-12T16:00:00.000Z",
                "kt": "https://kitsu.io/manga/38860",
                "last_updated": "2020-06-28T08:15:55.170Z",
                "latest_chapter": 157,
                "latest_release": "2020-07-05T16:00:00.000Z",
                "mal": "https://myanimelist.net/manga/103897",
                "manga_id": 1,
                "mu": "https://www.mangaupdates.com/series.html?id=139601",
                "nu": "https://www.novelupdates.com/series/null",
                "raw": "null",
                "release_interval": Object {
                  "days": 7,
                },
                "services": Array [
                  Object {
                    "name": "MANGA Plus",
                    "service_id": 1,
                    "title_id": "100010",
                    "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                    "url_format": "https://mangaplus.shueisha.co.jp/viewer/{}",
                  },
                  Object {
                    "name": "MangaDex",
                    "service_id": 2,
                    "title_id": "20882",
                    "url": "https://mangadex.org/title/{}",
                    "url_format": "https://mangadex.org/chapter/{}",
                  },
                ],
                "status": 0,
                "title": "Dr. STONE",
              }
            }
          />
          <MangaAliases />
        </WithStyles(ForwardRef(Grid))>
        <MangaSourceList
          classesProp={
            Array [
              "makeStyles-sourceList-8",
            ]
          }
          followUnfollow={[Function]}
          items={
            Array [
              Object {
                "name": "MANGA Plus",
                "service_id": 1,
                "title_id": "100010",
                "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                "url_format": "https://mangaplus.shueisha.co.jp/viewer/{}",
              },
              Object {
                "name": "MangaDex",
                "service_id": 2,
                "title_id": "20882",
                "url": "https://mangadex.org/title/{}",
                "url_format": "https://mangadex.org/chapter/{}",
              },
            ]
          }
          userFollows={Array []}
        />
      </WithStyles(ForwardRef(Grid))>
    </div>
    <WithStyles(ForwardRef(Tabs))
      onChange={[Function]}
      value={0}
    >
      <WithStyles(ForwardRef(Tab))
        label="Chapters"
        value={0}
      />
      <WithStyles(ForwardRef(Tab))
        label="Stats"
        value={1}
      />
    </WithStyles(ForwardRef(Tabs))>
    <TabPanelCustom
      index={0}
      noRerenderOnChange={true}
      value={0}
    >
      <ChapterList
        chapters={
          Array [
            Object {
              "chapter_number": 157,
              "chapter_url": "1007322",
              "group": "Shueisha",
              "release_date": 2020-07-05T16:00:00.000Z,
              "service_id": 1,
              "title": "Z=157: Same Time, Same Place",
              "url": "https://mangaplus.shueisha.co.jp/viewer/1007322",
            },
            Object {
              "chapter_number": 156,
              "chapter_url": "938629",
              "group": "MangaPlus",
              "release_date": 1970-01-01T00:00:00.000Z,
              "service_id": 2,
              "title": "Z=156: Two Scientists",
              "url": "https://mangadex.org/chapter/938629",
            },
            Object {
              "chapter_number": 156,
              "chapter_url": "1007024",
              "group": "Shueisha",
              "release_date": 2020-06-26T16:00:00.000Z,
              "service_id": 1,
              "title": "Z=156: Two Scientists",
              "url": "https://mangaplus.shueisha.co.jp/viewer/1007024",
            },
          ]
        }
        editable={false}
        mangaId={1}
        serviceUrlFormats={
          Object {
            "1": "https://mangaplus.shueisha.co.jp/viewer/{}",
            "2": "https://mangadex.org/chapter/{}",
          }
        }
      />
    </TabPanelCustom>
    <TabPanelCustom
      index={1}
      noRerenderOnChange={true}
      value={0}
    >
      <ReleaseHeatmap
        dataRows={Array []}
      />
    </TabPanelCustom>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(ForwardRef(Container))>
`;

exports[`Manga page should render correctly should render correctly when logged in 1`] = `
<WithStyles(ForwardRef(Container))
  disableGutters={true}
  maxWidth="lg"
>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-paper-10"
  >
    <div
      className="makeStyles-titleBar-2"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-title-1"
        variant="h4"
      >
        Dr. STONE
      </WithStyles(ForwardRef(Typography))>
    </div>
    <div
      className="makeStyles-details-5"
    >
      <a
        href="https://myanimelist.net/manga/103897"
        rel="noreferrer noopener"
        target="_blank"
      >
        <img
          alt="Dr. STONE"
          className="makeStyles-thumbnail-4"
          src="https://mangadex.org/images/manga/20882.jpg?1585634146"
        />
      </a>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-rootGrid-12"
        container={true}
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-infoGrid-11"
          container={true}
          direction="column"
        >
          <MangaInfo
            mangaData={
              Object {
                "al": "https://anilist.co/manga/98416",
                "amz": "https://www.amazon.co.jp/gp/product/B075F8JBQ1",
                "ap": "https://www.anime-planet.com/manga/dr-stone",
                "artist": "Boichi",
                "author": "Inagaki Riichiro",
                "bw": "https://bookwalker.jp/series/114645",
                "chapters": Array [
                  Object {
                    "chapter_number": 157,
                    "chapter_url": "1007322",
                    "group": "Shueisha",
                    "release_date": 1593964800000,
                    "service_id": 1,
                    "title": "Z=157: Same Time, Same Place",
                  },
                  Object {
                    "chapter_number": 156,
                    "chapter_url": "938629",
                    "group": "MangaPlus",
                    "release_date": null,
                    "service_id": 2,
                    "title": "Z=156: Two Scientists",
                  },
                  Object {
                    "chapter_number": 156,
                    "chapter_url": "1007024",
                    "group": "Shueisha",
                    "release_date": 1593187200000,
                    "service_id": 1,
                    "title": "Z=156: Two Scientists",
                  },
                ],
                "cover": "https://mangadex.org/images/manga/20882.jpg?1585634146",
                "ebj": "https://www.ebookjapan.jp/ebj/413780/",
                "engtl": "https://www.viz.com/dr-stone",
                "estimated_release": "2020-07-12T16:00:00.000Z",
                "kt": "https://kitsu.io/manga/38860",
                "last_updated": "2020-06-28T08:15:55.170Z",
                "latest_chapter": 157,
                "latest_release": "2020-07-05T16:00:00.000Z",
                "mal": "https://myanimelist.net/manga/103897",
                "manga_id": 1,
                "mu": "https://www.mangaupdates.com/series.html?id=139601",
                "nu": "https://www.novelupdates.com/series/null",
                "raw": "null",
                "release_interval": Object {
                  "days": 7,
                },
                "services": Array [
                  Object {
                    "name": "MANGA Plus",
                    "service_id": 1,
                    "title_id": "100010",
                    "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                    "url_format": "https://mangaplus.shueisha.co.jp/viewer/{}",
                  },
                  Object {
                    "name": "MangaDex",
                    "service_id": 2,
                    "title_id": "20882",
                    "url": "https://mangadex.org/title/{}",
                    "url_format": "https://mangadex.org/chapter/{}",
                  },
                ],
                "status": 0,
                "title": "Dr. STONE",
              }
            }
          />
          <MangaAliases />
        </WithStyles(ForwardRef(Grid))>
        <MangaSourceList
          classesProp={
            Array [
              "makeStyles-sourceList-8",
            ]
          }
          followUnfollow={[Function]}
          items={
            Array [
              Object {
                "name": "MANGA Plus",
                "service_id": 1,
                "title_id": "100010",
                "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                "url_format": "https://mangaplus.shueisha.co.jp/viewer/{}",
              },
              Object {
                "name": "MangaDex",
                "service_id": 2,
                "title_id": "20882",
                "url": "https://mangadex.org/title/{}",
                "url_format": "https://mangadex.org/chapter/{}",
              },
            ]
          }
          userFollows={Array []}
        />
      </WithStyles(ForwardRef(Grid))>
    </div>
    <WithStyles(ForwardRef(Tabs))
      onChange={[Function]}
      value={0}
    >
      <WithStyles(ForwardRef(Tab))
        label="Chapters"
        value={0}
      />
      <WithStyles(ForwardRef(Tab))
        label="Stats"
        value={1}
      />
    </WithStyles(ForwardRef(Tabs))>
    <TabPanelCustom
      index={0}
      noRerenderOnChange={true}
      value={0}
    >
      <ChapterList
        chapters={
          Array [
            Object {
              "chapter_number": 157,
              "chapter_url": "1007322",
              "group": "Shueisha",
              "release_date": 2020-07-05T16:00:00.000Z,
              "service_id": 1,
              "title": "Z=157: Same Time, Same Place",
              "url": "https://mangaplus.shueisha.co.jp/viewer/1007322",
            },
            Object {
              "chapter_number": 156,
              "chapter_url": "938629",
              "group": "MangaPlus",
              "release_date": 1970-01-01T00:00:00.000Z,
              "service_id": 2,
              "title": "Z=156: Two Scientists",
              "url": "https://mangadex.org/chapter/938629",
            },
            Object {
              "chapter_number": 156,
              "chapter_url": "1007024",
              "group": "Shueisha",
              "release_date": 2020-06-26T16:00:00.000Z,
              "service_id": 1,
              "title": "Z=156: Two Scientists",
              "url": "https://mangaplus.shueisha.co.jp/viewer/1007024",
            },
          ]
        }
        editable={false}
        mangaId={1}
        serviceUrlFormats={
          Object {
            "1": "https://mangaplus.shueisha.co.jp/viewer/{}",
            "2": "https://mangadex.org/chapter/{}",
          }
        }
      />
    </TabPanelCustom>
    <TabPanelCustom
      index={1}
      noRerenderOnChange={true}
      value={0}
    >
      <ReleaseHeatmap
        dataRows={Array []}
      />
    </TabPanelCustom>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(ForwardRef(Container))>
`;

exports[`Manga page should render correctly should render correctly with little data 1`] = `
<WithStyles(ForwardRef(Container))
  disableGutters={true}
  maxWidth="lg"
>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-paper-10"
  >
    <div
      className="makeStyles-titleBar-2"
    >
      <WithStyles(ForwardRef(Typography))
        className="makeStyles-title-1"
        variant="h4"
      >
        Dr. STONE
      </WithStyles(ForwardRef(Typography))>
    </div>
    <div
      className="makeStyles-details-5"
    >
      <a
        href={null}
        rel="noreferrer noopener"
        target="_blank"
      >
        <img
          alt="Dr. STONE"
          className="makeStyles-thumbnail-4"
          src={null}
        />
      </a>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-rootGrid-12"
        container={true}
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-infoGrid-11"
          container={true}
          direction="column"
        >
          <MangaInfo
            mangaData={
              Object {
                "al": "https://anilist.co/manga/98416",
                "amz": "https://www.amazon.co.jp/gp/product/B075F8JBQ1",
                "ap": "https://www.anime-planet.com/manga/dr-stone",
                "artist": "Boichi",
                "author": "Inagaki Riichiro",
                "bw": "https://bookwalker.jp/series/114645",
                "chapters": Array [],
                "cover": null,
                "ebj": "https://www.ebookjapan.jp/ebj/413780/",
                "engtl": "https://www.viz.com/dr-stone",
                "estimated_release": null,
                "kt": "https://kitsu.io/manga/38860",
                "last_updated": null,
                "latest_chapter": null,
                "latest_release": null,
                "mal": null,
                "manga_id": 2,
                "mu": "https://www.mangaupdates.com/series.html?id=139601",
                "nu": "https://www.novelupdates.com/series/null",
                "raw": "null",
                "release_interval": undefined,
                "services": Array [
                  Object {
                    "name": "MANGA Plus",
                    "service_id": 1,
                    "title_id": "100010",
                    "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                    "url_format": "https://mangaplus.shueisha.co.jp/viewer/{}",
                  },
                ],
                "status": 0,
                "title": "Dr. STONE",
              }
            }
          />
          <MangaAliases />
        </WithStyles(ForwardRef(Grid))>
        <MangaSourceList
          classesProp={
            Array [
              "makeStyles-sourceList-8",
            ]
          }
          followUnfollow={[Function]}
          items={
            Array [
              Object {
                "name": "MANGA Plus",
                "service_id": 1,
                "title_id": "100010",
                "url": "https://mangaplus.shueisha.co.jp/titles/{}",
                "url_format": "https://mangaplus.shueisha.co.jp/viewer/{}",
              },
            ]
          }
          userFollows={Array []}
        />
      </WithStyles(ForwardRef(Grid))>
    </div>
    <WithStyles(ForwardRef(Tabs))
      onChange={[Function]}
      value={0}
    >
      <WithStyles(ForwardRef(Tab))
        label="Chapters"
        value={0}
      />
      <WithStyles(ForwardRef(Tab))
        label="Stats"
        value={1}
      />
    </WithStyles(ForwardRef(Tabs))>
    <TabPanelCustom
      index={0}
      noRerenderOnChange={true}
      value={0}
    >
      <ChapterList
        chapters={Array []}
        editable={false}
        mangaId={2}
        serviceUrlFormats={
          Object {
            "1": "https://mangaplus.shueisha.co.jp/viewer/{}",
          }
        }
      />
    </TabPanelCustom>
    <TabPanelCustom
      index={1}
      noRerenderOnChange={true}
      value={0}
    >
      <ReleaseHeatmap
        dataRows={Array []}
      />
    </TabPanelCustom>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(ForwardRef(Container))>
`;
